# Q4_25_Accel_Deepesh_Singh_Rathore

accel-p-escrow/: Cargo.toml
accel-pinocchio-escrow/src/: lib.rs
accel-pinocchio-escrow/src/instructions/: mod.rs  take.rs
accel-pinocchio-escrow/src/state/: escrow.rs
magicblock-challange/: Anchor.toml
magicblock-challange/programs/er/: Cargo.toml
magicblock-challange/programs/er/src/: lib.rs
magicblock-challange/programs/random/: Cargo.toml
magicblock-challange/programs/random/src/: lib.rs
magicblock-challange/tests/: magicblock-challange.ts
magicblock-challenge/: Anchor.toml
magicblock-challenge/programs/magicblock-challenge/: Cargo.toml
magicblock-challenge/programs/magicblock-challenge/src/: lib.rs
magicblock-challenge/tests/: magicblock-challenge.ts
magicblock_vrf/: Anchor.toml
magicblock_vrf/programs/magicblock_vrf/: Cargo.toml
magicblock_vrf/programs/magicblock_vrf/src/: lib.rs
magicblock_vrf/tests/: magicblock_vrf.ts
week1-challenge/vault/: Anchor.toml
week1-challenge/vault/programs/t_hook/: Cargo.toml
week1-challenge/vault/programs/vault/: Cargo.toml
week1-challenge/vault/programs/vault/src/: lib.rs
week1-challenge/vault/programs/vault/src/instructions/: initialize.rs  mod.rs  transfer_operation.rs
week1-challenge/vault/programs/vault/src/state/: vault.rs
whitelist-tranfer-hook-pda-per-user/: Anchor.toml
whitelist-tranfer-hook-pda-per-user/programs/whitelist-tranfer-hook-pda-per-user/: Cargo.toml
whitelist-tranfer-hook-pda-per-user/tests/: whitelist-tranfer-hook-pda-per-user.ts
(+19 files in other folders)
